0.11 Fri May 11 16:15:04 GMT 2012
  - Generate date time strings with a full timezone, not just "Z".
  - Additional coercions added. [Aaron Moses].

0.10 Fri Jan  6 12:14:50 GMT 2012
  - Fix and test casting of epoch times.

0.09 Wed Jan  4 19:16:21 GMT 2012
  - Coerce to DateTime objects.
  - DateTimes must be in UTC now enforced.

0.08 Fri Dec 16 16:23:31 GMT 2011
  - Durations can omit components, as per standard.
  - Date durations do not contain a "T" character.
  - Output fractional seconds.

0.07 Mon Sept  7 16:28:00 BST 2010
  - Really fix so that it works in all cases.

0.06 Mon Sept  6 15:44:00 BST 2010
  - Fix so that it works wihtout MooseX::Types::DateTime::MySQL installed.

0.05 Mon Sept  6 15:16:00 BST 2010
  - Add support for coercing to and from MooseX::Types::DateTime::MySQL

0.04 Sun Aug 15 18:23:00 BST 2010
  - Fix tests on perls compiled with uselongdoubles (RT#60356)

0.03 Fri Aug 13 11:15:00 BST 2010
  - See also to the ISO8601 wiki page.
  - Added fractional times and tests to Durations.
  - Added coercion from Durations to DateTime objects
  - Deal better with duration cases found in the spec
    and real world by dealing with optionally empty hours.

0.02 Fri Oct  9 11:00:55 BST 2009
  - Fixed time types.
  - Added coercions for the time types.
  - Documentation improvements

0.01 Fri Jun 12 12:42:29 BST 2009
  - Initial version.
